Add CustomizablePage Sample

--- a/src/SwipeCardView.Sample/MainPage.xaml
+++ b/src/SwipeCardView.Sample/MainPage.xaml
@@ -10,6 +10,7 @@
 
         <Button Text="Simple Page" Clicked="OnSimplePageClicked" />
         <Button Text="Tinder Page" Clicked="OnTinderPageClicked" />
+        <Button Text="Customizable Page" Clicked="OnCustomizablePageClicked" />
     </VerticalStackLayout>
 
 </ContentPage>
