--- a/samples/SwipeCardView.Sample/MainPage.xaml
+++ b/samples/SwipeCardView.Sample/MainPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SwipeCardView.Sample.MainPage"
-             Title="SwipeCardView">
+             Shell.BackgroundColor="{x:StaticResource Primary}"
+             Shell.TitleColor="{x:StaticResource White}"
+             Title="SwipeCardView Samples">
 
     <VerticalStackLayout Spacing="5"
         HorizontalOptions="Center"
